tests/expected_invalid_field_access_contracts.diag.out
<input>:20:5: error: field access requires record, proof, or phase value, got 'Int'
        1.value
        ^^^^^^^
<input>:24:5: error: type 'test::Point' has no field 'missing'
        Point { x: 1 }.missing
        ^^^^^^^^^^^^^^^^^^^^^^
<input>:27:32: error: exported semantic-claim function 'bad_proof_field' must expose a consequence-carrying success surface
    public fn bad_proof_field() -> Int proves Receipt {
                                   ^^^
<input>:29:5: error: type 'test::Receipt' has no field 'missing'
        receipt.missing
        ^^^^^^^^^^^^^^^
<input>:32:32: error: exported semantic-claim function 'bad_phase_field' must expose a consequence-carrying success surface
    public fn bad_phase_field() -> Int {
                                   ^^^
<input>:33:5: error: type 'test::Config::Draft' has no field 'missing'
        Config::Draft { id: 1 }.missing
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<input>:37:5: error: type 'MapEntry<Text, Int>' has no field 'missing'
        entry.missing
        ^^^^^^^^^^^^^
<input>:41:5: error: field access on affine value requires a copyable field type
        first.first
        ^^^^^^^^^^^
